--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,9 @@
 <!DOCTYPE>
 <html>
 <head>
+	<title>MEMORIES</title>
+	<link rel="stylesheet" href="style.css">
+</head>
 	<link rel="stylesheet" href="style.css">
 </head>
 <style>
