--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset=utf-8">
-	<title>ALL ABOUT ME</title>
+	<title>EDUCATION</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <style>
